[gd_scene load_steps=3 format=2]

[ext_resource path="res://Textures/Weapons/PistolAmmo.png" type="Texture" id=1]
[ext_resource path="res://HUD/InventoryItem.gd" type="Script" id=2]

[node name="InventoryItem" type="TextureRect"]
margin_right = 192.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 48, 48 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hover" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.0313726, 1, 0, 0.411765 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="hide" from="." to="." method="_on_hide"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
